--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "prepare": "husky install",
     "husky:postinstall": "husky install",
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -14,6 +15,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
+    "@types/d3-scale": "^4.0.5",
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.2",
@@ -49,7 +51,7 @@
     "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^8.0.2",
+    "husky": "^8.0.3",
     "prettier": "^2.8.1",
     "react-scripts": "^5.0.1",
     "sass": "^1.57.1",
