--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "format": "npm run code:format && npm run lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^2.9.10",
+    "@hookform/resolvers": "^2.9.11",
     "@types/d3-scale": "^4.0.5",
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.2",
     "c3": "^0.4.24",
+    "hooks": "^0.3.2",
     "mobx": "^6.7.0",
     "mobx-react": "^7.6.0",
     "prop-types": "^15.8.1",
@@ -27,7 +28,7 @@
     "react-avatar": "^5.0.3",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.41.1",
+    "react-hook-form": "^7.47.0",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.6.1",
     "react-spinners": "^0.13.7",
